# colorful-cli-notes

./: Cargo.toml  notes.json  testNotes.json
src/: actions.rs  main.rs  manipulate_json.rs
src/notes/: actions.rs  color_utils.rs  manipulate_json.rs  mod.rs  note_utils.rs  structs.rs
