[package]
name = "colorful-cli-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
dialoguer = "0.10.2"
console = "0.15.2"
colored = "2.0.0"
open = "3.2.0"
